@@ -1,25 +1,30 @@
 // 요청의 JWT 토큰을 검사해서 인증 정보를 설정하는 필터
 package com.stock.mockstock.global.security.jwt;
 
+import com.stock.mockstock.domain.user.entity.User;
+import com.stock.mockstock.domain.user.enumtype.Role;
+import com.stock.mockstock.domain.user.repository.UserRepository;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
+    private final UserRepository userRepository;
 
     @Override
     // Authorization 헤더의 Bearer 토큰을 검사
@@ -45,19 +50,32 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         String email = jwtUtil.getEmailFromToken(token);
 
+        userRepository.findByEmail(email).ifPresent(user -> {
+            UsernamePasswordAuthenticationToken authentication = createAuthentication(user, request);
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+        });
+
+        filterChain.doFilter(request, response);
+    }
+
+    // DB에 저장된 사용자 role을 Spring Security 권한으로 변환해 인증 객체를 생성한다.
+    private UsernamePasswordAuthenticationToken createAuthentication(
+            User user,
+            HttpServletRequest request
+    ) {
+        Role role = user.getRole() == null ? Role.USER : user.getRole();
+
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken(
-                        email,
+                        user.getEmail(),
                         null,
-                        Collections.emptyList()
+                        List.of(new SimpleGrantedAuthority("ROLE_" + role.name()))
                 );
 
         authentication.setDetails(
                 new WebAuthenticationDetailsSource().buildDetails(request)
         );
 
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-
-        filterChain.doFilter(request, response);
+        return authentication;
     }
 }
